--- a/env_test.ipynb
+++ b/env_test.ipynb
@@ -8,8 +8,11 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "from environment import Environment\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -23,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-10 20:35:48,618] Making new env: Breakout-v0\n"
+      "[2017-02-10 21:00:20,087] Making new env: Breakout-v0\n"
      ]
     }
    ],
@@ -43,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-10 20:35:48,925] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.7566.video000000.mp4\n"
+      "[2017-02-10 21:00:20,644] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.7854.video000000.mp4\n"
      ]
     },
     {
@@ -51,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "(84, 84, 4)\n",
-      "2\n",
+      "5\n",
       "(84, 84, 4)\n"
      ]
     }
@@ -68,6 +71,83 @@
     "next_state, reward, done = env.step(sess, action)\n",
     "print (next_state.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACFBJREFUeJzt3d+PlNUdx/H3l8UfBTGWLBICtNpKkzap2pRYbUwTQzWE\nNkF7gb8uaGPClbdN+BNae9NeljRGboylaalebBXijTE2KdK0/mjFUsUKEWGLRoEq7vLtxcxsN3SB\nZeY58+wc3q9kM8888+OcfHLy4eyzO2xkJpKk0beo7QlIkpphoUtSJSx0SaqEhS5JlbDQJakSFrok\nVWKgQo+IjRFxICIORsT2pialDvMtx2zLMdv2RL+/hx4RY8CbwN3AYWAf8GBm/q256V2+zLccsy3H\nbNs1yA79NuBgZr6VmWeAp4DNzUxLmG9JZluO2bZo8QCvXQ28O+v+YeBb5z4pIrYB2wCWLOGbN335\nf0O+/eqyAYavx41f/3jm+JVXpyYzcwXzyNdsL67fbMF856OX77uHpzlx4mxgto05z9q9oEEKfV4y\ncwewA+CWm6/IiYnxmcd++IU7Sw8/Ep6YeHHmeM3ao+/M93Vme3H9ZgvmOx+9fDdtmryk15ntxfWz\ndge55HIEWDvr/pruOTXDfMsx23LMtkWDFPo+YF1E3BgRVwIPAM80My1hviWZbTlm26K+L7lk5lRE\nPAo8B4wBj2fm643N7DJnvuWYbTlm266BrqFn5gQw0dBcdA7zLcdsyzHb9vhJUUmqhIUuSZWw0CWp\nEha6JFXCQpekShT/pOiFrHjpujaHr5rZlmW+5Zht/9yhS1IlLHRJqkSrl1zuG/9zm8NXzWzLMt9y\nzLZ/7tAlqRIWuiRVotVLLlcvOtPm8FUz27LMtxyz7Z87dEmqRKs79O8t+aTN4ReM96aaf0+z7SiR\nLZhvj2u3nH6ydYcuSZWw0CWpEq1ecvn5Bze0OfyCcf+y1xp/T7PtKJEtmG+Pa7ecfrJ1hy5JlWh1\nh/6LP21oc/gF4/4Nze9yzLajRLZgvj2u3XL6ydYduiRVwkKXpEq0esnlKz/a3+bwC8e/mn9Ls+0q\nkC2Y7wzXbjl9ZOsOXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSljoklQJC12SKmGhS1Il\nLHRJqoSFLkmVsNAlqRLz+t8WI+IQ8DEwDUxl5vqIWA78GrgBOARsycwPykyzXi/mBBu+e4axMVg8\n1jlnts25/Y5jLF26iLFOtl8F823K7LX79tudP1Fvtu26lB36XZl5a2au797fDjyfmeuA57v31Yff\n7FrOnufGmZgY750y2wb18gX+3j1lvg3pZbvuppm9odm2aJBLLpuBnd3jncC9g09HXWZblvmWY7Yt\nmu8fuEhgT0Qk8MvM3AGszMz3uo8fBVbO9cKI2AZsA1i92kv2c3no4RNEwMMPL+mdMtuGRMRMvkDv\nWyDzbUgv2xMnzvZOmW2L5lvod2bmkYi4HtgbEW/MfjAzs1v2/6db/jsAbrn5ijmfczlbz1089Yf9\nTE5O8+BDHwBcM/txsx3M7367nFWrxpicnObWbxy/PiK+M/tx8+3f7LV7+x3HMdv2zeufxsw80r09\nBuwGbgPej4hVAN3bY6UmWbOr43MAjI+PsXHjVQBLMdvGrFrV+Wno+PgYwIe4dhsze+1ee22A2bbu\nooUeEUsjYlnvGLgHeA14BtjafdpW4OlSk6zVdE4xlZ8BcPr0WV544QzAfzDbRkznFCdPdi4FnD59\nFuBaXLuNOHftnjyZYLatm88ll5XA7uhchFwMPJmZz0bEPmBXRDwCvANsKTfNOn3KJ7zCH7n7nlNM\nT8O9m69m//7PPgJ+gtkO7FM+4b4fnABgehqAD127zTh37S5btohTp6bNtmUXLfTMfAu4ZY7z/wY2\nlJjU5WJJXMPt3M0Te16cOffYz06abUOWxDXs2jPzq6CsWXv0KLh2m3Du2t20aRIw27b542VJqoSF\nLkmVsNAlqRIWuiRVwkKXpEpY6JJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVcJCl6RKWOiS\nVAkLXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSiwe5mAfnb2KvadvGOaQA1vx0nUXfPz4\ntz8ceIwfH/7+rHu/6us9zHZuTWQL5ns+vXwPf/b7vt/DbOfWz9p1hy5JlYjMHN5gER8DB4Y24ODG\ngckhj/nFzFxxqS+KiOPAKYY/336NTLYwcmvXbMtasPkO9ZILcCAz1w95zL5FxMujMt/MXDFK8x2l\nuXaNzNo127IWcr5ecpGkSljoklSJYRf6jiGPNyjnW84ozRVGa76jNFdwvo0Z6g9FJUnleMlFkiph\noUtSJYZW6BGxMSIORMTBiNg+rHHnKyIORcSrEfGXiHi5e255ROyNiH90bz/f9jznYrblLPRswXxL\nGrlsM7P4FzAG/BP4EnAl8Ffga8MY+xLmeAgYP+fcY8D27vF24Kdtz9NszdZ8zfZ8X8Paod8GHMzM\ntzLzDPAUsHlIYw9iM7Cze7wTuLfFuZyP2ZYzqtmC+Za0YLMdVqGvBt6ddf9w99xCksCeiNgfEdu6\n51Zm5nvd46PAynamdkFmW84oZAvmW9JIZTvsj/4vZHdm5pGIuB7YGxFvzH4wMzMi/B3P/phtWeZb\nzkhlO6wd+hFg7az7a7rnFozMPNK9PQbspvPt4PsRsQqge3usvRmel9mWs+CzBfMtadSyHVah7wPW\nRcSNEXEl8ADwzJDGvqiIWBoRy3rHwD3Aa3TmuLX7tK3A0+3M8ILMtpwFnS2Yb0mjmO1QLrlk5lRE\nPAo8R+cn249n5uvDGHueVgK7IwI6mTyZmc9GxD5gV0Q8ArwDbGlxjnMy23JGIFsw35JGLls/+i9J\nlfCTopJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVeK/02ATNVorDBIAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10dfe2470>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "\n",
+    "a=fig.add_subplot(1,4,1)\n",
+    "imgplot = plt.imshow(state[:,:,0])\n",
+    "\n",
+    "a=fig.add_subplot(1,4,2)\n",
+    "imgplot = plt.imshow(state[:,:,1])\n",
+    "\n",
+    "a=fig.add_subplot(1,4,3)\n",
+    "imgplot = plt.imshow(state[:,:,2])\n",
+    "\n",
+    "a=fig.add_subplot(1,4,4)\n",
+    "imgplot = plt.imshow(state[:,:,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACGZJREFUeJzt3d2PlOUZx/HvxeJLQYwli4QArbbSpE2qNiVWjWliqIbQ\nJmgPfD2gjQlHnjbhT2jtSXtY0hg5MZampXqwVYgnxtikSNP60kpLFStEhC0SBaq4y9WDndlu6ALL\nzHPPM3Pz/SRkZp7ZmfvKL3d+PPvsDkRmIkkafYvaHkCS1AwLXZIqYaFLUiUsdEmqhIUuSZWw0CWp\nEn0VekRsjIj9EXEgIrY1NZRmmG85ZluO2bYnev099IgYA/4O3AMcAvYCD2fmX5sb7/JlvuWYbTlm\n265+ztBvAw5k5tuZeQZ4BtjczFjCfEsy23LMtkWL+3jtauC9OY8PAd8694siYiuwFWDJEr5505f/\nt+Q7ry/rY/l63Pj1j2fvv/b61GRmrmAB+ZrtxfWaLZjvQnTzfe/QNMePnw3MtjHn2bsX1E+hL0hm\nbge2A9xy8xU5MTE++9wPvnBX6eVHwlMTL8/eX7P2yLsLfZ3ZXlyv2YL5LkQ3302bJi/pdWZ7cb3s\n3X4uuRwG1s55vKZzTM0w33LMthyzbVE/hb4XWBcRN0bElcBDwHPNjCXMtySzLcdsW9TzJZfMnIqI\nx4EXgDHgycx8s7HJLnPmW47ZlmO27errGnpmTgATDc2ic5hvOWZbjtm2x0+KSlIlLHRJqoSFLkmV\nsNAlqRIWuiRVovgnRS9kxSvXtbl81cy2LPMtx2x75xm6JFXCQpekSrR6yeX+8T+1uXzVzLYs8y3H\nbHvnGbokVcJCl6RKtHrJ5epFZ9pcvmpmW5b5lmO2vfMMXZIq0eoZ+neXfNLm8kPj/anm39NsZ5TI\nFsy3y71bTi/ZeoYuSZWw0CWpEq1ecvnZhze0ufzQeHDZG42/p9nOKJEtmG+Xe7ecXrL1DF2SKtHq\nGfrP/7ihzeWHxoMbmj/LMdsZJbIF8+1y75bTS7aeoUtSJSx0SapEq5dcvvLDfW0uPzz+1fxbmm1H\ngWzBfGe5d8vpIVvP0CWpEha6JFXCQpekSljoklQJC12SKmGhS1IlLHRJqoSFLkmVsNAlqRIWuiRV\nwkKXpEpY6JJUCQtdkiqxoH9tMSIOAh8D08BUZq6PiOXAr4AbgIPAA5n5YZkx6/VyTrDhO2cYG4PF\nYzPHzLY5t99xlKVLFzE2k+1XwXybMnfvvvPOzH9Rb7btupQz9Lsz89bMXN95vA14MTPXAS92Ho+M\nFa9c1/YIs369czm7XxhnYmK8e2iksx023XyBv3UOmW9Dutmuu2n23NBsW9TPJZfNwI7O/R3Aff2P\nMzjH7jzR9ggXMtLZjgDzLcdsW7TQ/+Aigd0RkcAvMnM7sDIz3+88fwRYOd8LI2IrsBVg9Wov2c/n\nkUePEwGPPrqke8hsGxIRs/kC3W+BzLch3WyPHz/bPWS2LVpood+VmYcj4npgT0S8NffJzMxO2f+f\nTvlvB7jl5ivm/ZrL2Xru5pnf72NycpqHH/kQ4Jq5z5ttf377m+WsWjXG5OQ0t37j2PUR8e25z5tv\n7+bu3dvvOIbZtm9BfzVm5uHO7VFgF3Ab8EFErALo3B4tNWTNro7PATA+PsbGjVcBLMVsG7Nq1cxP\nQ8fHxwBO4N5tzNy9e+21AWbbuosWekQsjYhl3fvAvcAbwHPAls6XbQGeLTVkraZziqn8DIDTp8/y\n0ktnAP6D2TZiOqc4eXLmUsDp02cBrsW924hz9+7Jkwlm27qFXHJZCeyKmYuQi4GnM/P5iNgL7IyI\nx4B3gQfKjVmnT/mE1/gD99x7iulpuG/z1ezb99lHwI8x2759yifc//3jAExPA3DCvduMc/fusmWL\nOHVq2mxbdtFCz8y3gVvmOf5vYEOJoS4XS+Iabucentr98uyxJ3560mwbsiSuYefu2V8FZc3aI0fA\nvduEc/fupk2TgNm2zR8vS1IlLHRJqoSFLkmVsNAlqRIWuiRVwkKXpEpY6JJUCQtdkiphoUtSJSx0\nSaqEhS5JlbDQJakSFrokVcJCl6RKWOiSVAkLXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFVi8SAX\n++jsVew5fcMgl7wkK1657oLPH7vzRJF1f3Toe3Me/bKn9xj2bOcziLybyBbM93y6+R767Hc9v4fZ\nzq+XvesZuiRVIjJzcItFfAzsH9iC/RsHJge85hczc8WlvigijgGnGPy8vRqZbGHk9q7ZljW0+Q70\nkguwPzPXD3jNnkXEq6Myb2auGKV5R2nWjpHZu2Zb1jDn6yUXSaqEhS5JlRh0oW8f8Hr9ct5yRmlW\nGK15R2lWcN7GDPSHopKkcrzkIkmVsNAlqRIDK/SI2BgR+yPiQERsG9S6CxURByPi9Yj4c0S82jm2\nPCL2RMQ/Orefb3vO+ZhtOcOeLZhvSSOXbWYW/wOMAf8EvgRcCfwF+Nog1r6EGQ8C4+ccewLY1rm/\nDfhJ23Oardmar9me78+gztBvAw5k5tuZeQZ4Btg8oLX7sRnY0bm/A7ivxVnOx2zLGdVswXxLGtps\nB1Xoq4H35jw+1Dk2TBLYHRH7ImJr59jKzHy/c/8IsLKd0S7IbMsZhWzBfEsaqWwH/dH/YXZXZh6O\niOuBPRHx1twnMzMjwt/x7I3ZlmW+5YxUtoM6Qz8MrJ3zeE3n2NDIzMOd26PALma+HfwgIlYBdG6P\ntjfheZltOUOfLZhvSaOW7aAKfS+wLiJujIgrgYeA5wa09kVFxNKIWNa9D9wLvMHMjFs6X7YFeLad\nCS/IbMsZ6mzBfEsaxWwHcsklM6ci4nHgBWZ+sv1kZr45iLUXaCWwKyJgJpOnM/P5iNgL7IyIx4B3\ngQdanHFeZlvOCGQL5lvSyGXrR/8lqRJ+UlSSKmGhS1IlLHRJqoSFLkmVsNAlqRIWuiRVwkKXpEr8\nF/GaFjVRC0KxAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10e3cfba8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "\n",
+    "a=fig.add_subplot(1,4,1)\n",
+    "imgplot = plt.imshow(next_state[:,:,0])\n",
+    "\n",
+    "a=fig.add_subplot(1,4,2)\n",
+    "imgplot = plt.imshow(next_state[:,:,1])\n",
+    "\n",
+    "a=fig.add_subplot(1,4,3)\n",
+    "imgplot = plt.imshow(next_state[:,:,2])\n",
+    "\n",
+    "a=fig.add_subplot(1,4,4)\n",
+    "imgplot = plt.imshow(next_state[:,:,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
