added the env configs

--- a/env_test.ipynb
+++ b/env_test.ipynb
@@ -13,6 +13,7 @@
     "%matplotlib inline\n",
     "\n",
     "from environment import Environment\n",
+    "from config import Configurations\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -30,13 +31,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-10 22:08:21,096] Making new env: Breakout-v0\n"
+      "[2017-02-11 09:32:37,702] Making new env: Breakout-v0\n"
      ]
     }
    ],
    "source": [
-    "state_processor_params = { \"resize_shape\": (84, 84), \"crop_box\": (34, 0, 160, 160), \"gray\": True, \"frames_num\": 4 }\n",
-    "env = Environment('Breakout-v0', './expriment', state_processor_params)"
+    "sess = tf.Session()\n",
+    "config = Configurations()\n",
+    "env = Environment(sess, config)"
    ]
   },
   {
@@ -52,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-10 22:08:21,279] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.8668.video000000.mp4\n"
+      "[2017-02-11 09:32:37,856] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.1069.video000000.mp4\n"
      ]
     },
     {
@@ -61,23 +63,21 @@
      "text": [
       "[0, 1, 2, 3, 4, 5]\n",
       "(84, 84, 4)\n",
-      "5\n",
+      "4\n",
       "(84, 84, 4)\n"
      ]
     }
    ],
    "source": [
-    "sess = tf.Session()\n",
-    "\n",
     "print (env.valid_actions)\n",
     "\n",
-    "state = env.reset(sess)\n",
+    "state = env.reset()\n",
     "print (state.shape)\n",
     "\n",
     "action = env.sample_action()\n",
     "print (action)\n",
     "\n",
-    "next_state, reward, done = env.step(sess, action)\n",
+    "next_state, reward, done = env.step(action)\n",
     "print (next_state.shape)"
    ]
   },
@@ -94,7 +94,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACFBJREFUeJzt3d+PlNUdx/H3l8UfBTGWLBICtNpKkzap2pRYbUwTQzWE\nNkF7gb8uaGPClbdN+BNae9NeljRGboylaalebBXijTE2KdK0/mjFUsUKEWGLRoEq7vLtxcxsN3SB\nZeY58+wc3q9kM8888+OcfHLy4eyzO2xkJpKk0beo7QlIkpphoUtSJSx0SaqEhS5JlbDQJakSFrok\nVWKgQo+IjRFxICIORsT2pialDvMtx2zLMdv2RL+/hx4RY8CbwN3AYWAf8GBm/q256V2+zLccsy3H\nbNs1yA79NuBgZr6VmWeAp4DNzUxLmG9JZluO2bZo8QCvXQ28O+v+YeBb5z4pIrYB2wCWLOGbN335\nf0O+/eqyAYavx41f/3jm+JVXpyYzcwXzyNdsL67fbMF856OX77uHpzlx4mxgto05z9q9oEEKfV4y\ncwewA+CWm6/IiYnxmcd++IU7Sw8/Ep6YeHHmeM3ao+/M93Vme3H9ZgvmOx+9fDdtmryk15ntxfWz\ndge55HIEWDvr/pruOTXDfMsx23LMtkWDFPo+YF1E3BgRVwIPAM80My1hviWZbTlm26K+L7lk5lRE\nPAo8B4wBj2fm643N7DJnvuWYbTlm266BrqFn5gQw0dBcdA7zLcdsyzHb9vhJUUmqhIUuSZWw0CWp\nEha6JFXCQpekShT/pOiFrHjpujaHr5rZlmW+5Zht/9yhS1IlLHRJqkSrl1zuG/9zm8NXzWzLMt9y\nzLZ/7tAlqRIWuiRVotVLLlcvOtPm8FUz27LMtxyz7Z87dEmqRKs79O8t+aTN4ReM96aaf0+z7SiR\nLZhvj2u3nH6ydYcuSZWw0CWpEq1ecvn5Bze0OfyCcf+y1xp/T7PtKJEtmG+Pa7ecfrJ1hy5JlWh1\nh/6LP21oc/gF4/4Nze9yzLajRLZgvj2u3XL6ydYduiRVwkKXpEq0esnlKz/a3+bwC8e/mn9Ls+0q\nkC2Y7wzXbjl9ZOsOXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSljoklQJC12SKmGhS1Il\nLHRJqoSFLkmVsNAlqRLz+t8WI+IQ8DEwDUxl5vqIWA78GrgBOARsycwPykyzXi/mBBu+e4axMVg8\n1jlnts25/Y5jLF26iLFOtl8F823K7LX79tudP1Fvtu26lB36XZl5a2au797fDjyfmeuA57v31Yff\n7FrOnufGmZgY750y2wb18gX+3j1lvg3pZbvuppm9odm2aJBLLpuBnd3jncC9g09HXWZblvmWY7Yt\nmu8fuEhgT0Qk8MvM3AGszMz3uo8fBVbO9cKI2AZsA1i92kv2c3no4RNEwMMPL+mdMtuGRMRMvkDv\nWyDzbUgv2xMnzvZOmW2L5lvod2bmkYi4HtgbEW/MfjAzs1v2/6db/jsAbrn5ijmfczlbz1089Yf9\nTE5O8+BDHwBcM/txsx3M7367nFWrxpicnObWbxy/PiK+M/tx8+3f7LV7+x3HMdv2zeufxsw80r09\nBuwGbgPej4hVAN3bY6UmWbOr43MAjI+PsXHjVQBLMdvGrFrV+Wno+PgYwIe4dhsze+1ee22A2bbu\nooUeEUsjYlnvGLgHeA14BtjafdpW4OlSk6zVdE4xlZ8BcPr0WV544QzAfzDbRkznFCdPdi4FnD59\nFuBaXLuNOHftnjyZYLatm88ll5XA7uhchFwMPJmZz0bEPmBXRDwCvANsKTfNOn3KJ7zCH7n7nlNM\nT8O9m69m//7PPgJ+gtkO7FM+4b4fnABgehqAD127zTh37S5btohTp6bNtmUXLfTMfAu4ZY7z/wY2\nlJjU5WJJXMPt3M0Te16cOffYz06abUOWxDXs2jPzq6CsWXv0KLh2m3Du2t20aRIw27b542VJqoSF\nLkmVsNAlqRIWuiRVwkKXpEpY6JJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVcJCl6RKWOiS\nVAkLXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSiwe5mAfnb2KvadvGOaQA1vx0nUXfPz4\ntz8ceIwfH/7+rHu/6us9zHZuTWQL5ns+vXwPf/b7vt/DbOfWz9p1hy5JlYjMHN5gER8DB4Y24ODG\ngckhj/nFzFxxqS+KiOPAKYY/336NTLYwcmvXbMtasPkO9ZILcCAz1w95zL5FxMujMt/MXDFK8x2l\nuXaNzNo127IWcr5ecpGkSljoklSJYRf6jiGPNyjnW84ozRVGa76jNFdwvo0Z6g9FJUnleMlFkiph\noUtSJYZW6BGxMSIORMTBiNg+rHHnKyIORcSrEfGXiHi5e255ROyNiH90bz/f9jznYrblLPRswXxL\nGrlsM7P4FzAG/BP4EnAl8Ffga8MY+xLmeAgYP+fcY8D27vF24Kdtz9NszdZ8zfZ8X8Paod8GHMzM\ntzLzDPAUsHlIYw9iM7Cze7wTuLfFuZyP2ZYzqtmC+Za0YLMdVqGvBt6ddf9w99xCksCeiNgfEdu6\n51Zm5nvd46PAynamdkFmW84oZAvmW9JIZTvsj/4vZHdm5pGIuB7YGxFvzH4wMzMi/B3P/phtWeZb\nzkhlO6wd+hFg7az7a7rnFozMPNK9PQbspvPt4PsRsQqge3usvRmel9mWs+CzBfMtadSyHVah7wPW\nRcSNEXEl8ADwzJDGvqiIWBoRy3rHwD3Aa3TmuLX7tK3A0+3M8ILMtpwFnS2Yb0mjmO1QLrlk5lRE\nPAo8R+cn249n5uvDGHueVgK7IwI6mTyZmc9GxD5gV0Q8ArwDbGlxjnMy23JGIFsw35JGLls/+i9J\nlfCTopJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVeK/02ATNVorDBIAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d6e5588>"
+       "<matplotlib.figure.Figure at 0x10d7e16d8>"
       ]
      },
      "metadata": {},
@@ -128,9 +128,9 @@
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACF5JREFUeJzt3d+PlNUdx/H3l8UfBTGWLBICtNpKkzap2pRYNaaJoRpC\nm6C98OcFbUy48rYJf0Jrb9rLksbIjbE0LdWLrUK8McYmRZrWH620VLFCRNgiUaCKu3x7MTPbDV1g\nmXnOPDuH9yvZzDPP/Dgnn5x8OPvsDhuZiSRp9C1qewKSpGZY6JJUCQtdkiphoUtSJSx0SaqEhS5J\nlRio0CNiY0Tsj4gDEbGtqUmpw3zLMdtyzLY90e/voUfEGPB34B7gELAXeDgz/9rc9C5f5luO2ZZj\ntu0aZId+G3AgM9/OzDPAM8DmZqYlzLcksy3HbFu0eIDXrgbem3X/EPCtc58UEVuBrQBLlvDNm778\nvyHfeX3ZAMPX48avfzxz/NrrU5OZuYJ55Gu2F9dvtmC+89HL971D0xw/fjYw28acZ+1e0CCFPi+Z\nuR3YDnDLzVfkxMT4zGM/+MJdpYcfCU9NvDxzvGbtkXfn+zqzvbh+swXznY9evps2TV7S68z24vpZ\nu4NccjkMrJ11f033nJphvuWYbTlm26JBCn0vsC4iboyIK4GHgOeamZYw35LMthyzbVHfl1wycyoi\nHgdeAMaAJzPzzcZmdpkz33LMthyzbddA19AzcwKYaGguOof5lmO25Zhte/ykqCRVwkKXpEpY6JJU\nCQtdkiphoUtSJYp/UvRCVrxyXZvDV81syzLfcsy2f+7QJakSFrokVaLVSy73j/+pzeGrZrZlmW85\nZts/d+iSVAkLXZIq0eoll6sXnWlz+KqZbVnmW47Z9s8duiRVotUd+neXfNLm8AvG+1PNv6fZdpTI\nFsy3x7VbTj/ZukOXpEpY6JJUiVYvufzswxvaHH7BeHDZG42/p9l2lMgWzLfHtVtOP9m6Q5ekSrS6\nQ//5Hze0OfyC8eCG5nc5ZttRIlsw3x7Xbjn9ZOsOXZIqYaFLUiVaveTylR/ua3P4heNfzb+l2XYV\nyBbMd4Zrt5w+snWHLkmVsNAlqRIWuiRVwkKXpEpY6JJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakS\nFrokVcJCl6RKWOiSVIl5/W+LEXEQ+BiYBqYyc31ELAd+BdwAHAQeyMwPy0yzHiteuY5jd56Yuf9y\nTrDhO2cYG4PFY51zZtuc2+84ytKlixjrZPtVMN+mzF6777zT+RP1ZtuuS9mh352Zt2bm+u79bcCL\nmbkOeLF7X3349c7l7H5hnImJ8d4ps21QL1/gb91T5tuQXrbrbprZG5ptiwa55LIZ2NE93gHcN/h0\n6jd7d34BZluW+ZZjti2a7x+4SGB3RCTwi8zcDqzMzPe7jx8BVs71wojYCmwFWL3aS/ZzeeTR40TA\no48u6Z0y24ZExEy+QO9bIPNtSC/b48fP9k6ZbYvmW+h3ZebhiLge2BMRb81+MDOzW/b/p1v+2wFu\nufmKOZ9zOVvP3Tzz+31MTk7z8CMfAlwz+3GzHcxvf7OcVavGmJyc5tZvHLs+Ir49+3Hz7d/stXv7\nHccw2/bN65/GzDzcvT0K7AJuAz6IiFUA3dujpSZZs6vjcwCMj4+xceNVAEsx28asWtX5aej4+BjA\nCVy7jZm9dq+9NsBsW3fRQo+IpRGxrHcM3Au8ATwHbOk+bQvwbKlJ1mo6p5jKzwA4ffosL710BuA/\nmG0jpnOKkyc7lwJOnz4LcC2u3Uacu3ZPnkww29bN55LLSmBXdC5CLgaezsznI2IvsDMiHgPeBR4o\nN806fconvMYfuOfeU0xPw32br2bfvs8+An6M2Q7sUz7h/u8fB2B6GoATrt1mnLt2ly1bxKlT02bb\nsosWema+Ddwyx/l/AxtKTOpysSSu4Xbu4andL8+ce+KnJ822IUviGnbunvlVUNasPXIEXLtNOHft\nbto0CZht2/zxsiRVwkKXpEpY6JJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVcJCl6RKWOiS\nVAkLXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSljoklQJC12SKmGhS1IlFg9zsI/OXsWe\n0zcMc8iBrXjlugs+fuzOEwOP8aND35t175d9vYfZzq2JbMF8z6eX76HPftf3e5jt3PpZu+7QJakS\nkZnDGyziY2D/0AYc3DgwOeQxv5iZKy71RRFxDDjF8Ofbr5HJFkZu7ZptWQs236FecgH2Z+b6IY/Z\nt4h4dVTmm5krRmm+ozTXrpFZu2Zb1kLO10suklQJC12SKjHsQt8+5PEG5XzLGaW5wmjNd5TmCs63\nMUP9oagkqRwvuUhSJSx0SarE0Ao9IjZGxP6IOBAR24Y17nxFxMGIeD0i/hwRr3bPLY+IPRHxj+7t\n59ue51zMtpyFni2Yb0kjl21mFv8CxoB/Al8CrgT+AnxtGGNfwhwPAuPnnHsC2NY93gb8pO15mq3Z\nmq/Znu9rWDv024ADmfl2Zp4BngE2D2nsQWwGdnSPdwD3tTiX8zHbckY1WzDfkhZstsMq9NXAe7Pu\nH+qeW0gS2B0R+yJia/fcysx8v3t8BFjZztQuyGzLGYVswXxLGqlsh/3R/4Xsrsw8HBHXA3si4q3Z\nD2ZmRoS/49kfsy3LfMsZqWyHtUM/DKyddX9N99yCkZmHu7dHgV10vh38ICJWAXRvj7Y3w/My23IW\nfLZgviWNWrbDKvS9wLqIuDEirgQeAp4b0tgXFRFLI2JZ7xi4F3iDzhy3dJ+2BXi2nRlekNmWs6Cz\nBfMtaRSzHcoll8yciojHgRfo/GT7ycx8cxhjz9NKYFdEQCeTpzPz+YjYC+yMiMeAd4EHWpzjnMy2\nnBHIFsy3pJHL1o/+S1Il/KSoJFXCQpekSljoklQJC12SKmGhS1IlLHRJqoSFLkmV+C/poxhKu3BV\n7AAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACGlJREFUeJzt3d2PlOUZx/HvxeJLQYwli4QArbbSpE2qNiVWjWliqIbQ\nJmgPfD2gjQlHnjbhT2jtSXtY0hg5MZampXqwVYgnxtikSNP60kpLFStEhC0SBaq4y9WDmdlu6ALL\nzHPPs3Pz/SRkZp7ZmfvKL3d+PPvsDkRmIkkafYvaHkCS1AwLXZIqYaFLUiUsdEmqhIUuSZWw0CWp\nEgMVekRsjIj9EXEgIrY1NZQ6zLccsy3HbNsT/f4eekSMAX8H7gEOAXuBhzPzr82Nd/ky33LMthyz\nbdcgZ+i3AQcy8+3MPAM8A2xuZixhviWZbTlm26LFA7x2NfDerMeHgG+d+0URsRXYCrBkCd+86cv/\nW/Kd15cNsHw9bvz6xzP3X3t9ajIzVzCPfM324vrNFsx3Pnr5vndomuPHzwZm25jz7N0LGqTQ5yUz\ntwPbAW65+YqcmBifee4HX7ir9PIj4amJl2fur1l75N35vs5sL67fbMF856OX76ZNk5f0OrO9uH72\n7iCXXA4Da2c9XtM9pmaYbzlmW47ZtmiQQt8LrIuIGyPiSuAh4LlmxhLmW5LZlmO2Ler7kktmTkXE\n48ALwBjwZGa+2dhklznzLcdsyzHbdg10DT0zJ4CJhmbROcy3HLMtx2zb4ydFJakSFrokVcJCl6RK\nWOiSVAkLXZIqUfyTohey4pXr2ly+amZblvmWY7b98wxdkiphoUtSJVq95HL/+J/aXL5qZluW+ZZj\ntv3zDF2SKmGhS1IlWr3kcvWiM20uXzWzLct8yzHb/nmGLkmVaPUM/btLPmlz+QXj/anm39NsO0pk\nC+bb494tp59sPUOXpEpY6JJUiVYvufzswxvaXH7BeHDZG42/p9l2lMgWzLfHvVtOP9l6hi5JlWj1\nDP3nf9zQ5vILxoMbmj/LMduOEtmC+fa4d8vpJ1vP0CWpEha6JFWi1UsuX/nhvjaXXzj+1fxbmm1X\ngWzBfGe4d8vpI1vP0CWpEha6JFXCQpekSljoklQJC12SKmGhS1IlLHRJqoSFLkmVsNAlqRIWuiRV\nwkKXpEpY6JJUCQtdkioxr39tMSIOAh8D08BUZq6PiOXAr4AbgIPAA5n5YZkx6/VyTrDhO2cYG4PF\nY51jZtuc2+84ytKlixjrZPtVMN+mzN6777zT+S/qzbZdl3KGfndm3pqZ67uPtwEvZuY64MXu45Gx\n4pXr2h5hxq93Lmf3C+NMTIz3Do10tgtNL1/gb91D5tuQXrbrbpo5NzTbFg1yyWUzsKN7fwdw3+Dj\nDM+xO0+0PcKFjHS2I8B8yzHbFs33P7hIYHdEJPCLzNwOrMzM97vPHwFWzvXCiNgKbAVYvdpL9nN5\n5NHjRMCjjy7pHTLbhkTETL5A71sg821IL9vjx8/2Dplti+Zb6Hdl5uGIuB7YExFvzX4yM7Nb9v+n\nW/7bAW65+Yo5v+Zytp67eeb3+5icnObhRz4EuGb282Y7mN/+ZjmrVo0xOTnNrd84dn1EfHv28+bb\nv9l79/Y7jmG27ZvXX42Zebh7exTYBdwGfBARqwC6t0dLDVmzq+NzAIyPj7Fx41UASzHbxqxa1flp\n6Pj4GMAJ3LuNmb13r702wGxbd9FCj4ilEbGsdx+4F3gDeA7Y0v2yLcCzpYas1XROMZWfAXD69Fle\neukMwH8w20ZM5xQnT3YuBZw+fRbgWty7jTh37548mWC2rZvPJZeVwK7oXIRcDDydmc9HxF5gZ0Q8\nBrwLPFBuzDp9yie8xh+4595TTE/DfZuvZt++zz4CfozZDuxTPuH+7x8HYHoagBPu3Wacu3eXLVvE\nqVPTZtuyixZ6Zr4N3DLH8X8DG0oMdblYEtdwO/fw1O6XZ4498dOTZtuQJXENO3fP/Cooa9YeOQLu\n3Sacu3c3bZoEzLZt/nhZkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVcJCl6RKWOiSVAkLXZIqYaFL\nUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSljoklQJC12SKmGhS1IlLHRJqoSFLkmVsNAlqRKLh7nY\nR2evYs/pG4a5ZDErXrnuvM8du/PEJb3Xjw59b9ajX/Y1zyhme6EM4dJznEsT2YL5nk8v30Of/a7v\n9zDbufWzdz1Dl6RKRGYOb7GIj4H9Q1twcOPA5JDX/GJmrrjUF0XEMeAUw5+3XyOTLYzc3jXbshZs\nvkO95ALsz8z1Q16zbxHx6qjMm5krRmneUZq1a2T2rtmWtZDz9ZKLJFXCQpekSgy70LcPeb1BOW85\nozQrjNa8ozQrOG9jhvpDUUlSOV5ykaRKWOiSVImhFXpEbIyI/RFxICK2DWvd+YqIgxHxekT8OSJe\n7R5bHhF7IuIf3dvPtz3nXMy2nIWeLZhvSSOXbWYW/wOMAf8EvgRcCfwF+Now1r6EGQ8C4+ccewLY\n1r2/DfhJ23Oardmar9me78+wztBvAw5k5tuZeQZ4Btg8pLUHsRnY0b2/A7ivxVnOx2zLGdVswXxL\nWrDZDqvQVwPvzXp8qHtsIUlgd0Tsi4it3WMrM/P97v0jwMp2Rrsgsy1nFLIF8y1ppLId9kf/F7K7\nMvNwRFwP7ImIt2Y/mZkZEf6OZ3/MtizzLWeksh3WGfphYO2sx2u6xxaMzDzcvT0K7KLz7eAHEbEK\noHt7tL0Jz8tsy1nw2YL5ljRq2Q6r0PcC6yLixoi4EngIeG5Ia19URCyNiGW9+8C9wBt0ZtzS/bIt\nwLPtTHhBZlvOgs4WzLekUcx2KJdcMnMqIh4HXqDzk+0nM/PNYaw9TyuBXREBnUyezsznI2IvsDMi\nHgPeBR5occY5mW05I5AtmG9JI5etH/2XpEr4SVFJqoSFLkmVsNAlqRIWuiRVwkKXpEpY6JJUCQtd\nkirxX3XuFjVvgXmLAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10dbd5048>"
+       "<matplotlib.figure.Figure at 0x10d7e11d0>"
       ]
      },
      "metadata": {},
