env_test changes

--- a/env_test.ipynb
+++ b/env_test.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-11 09:32:37,702] Making new env: Breakout-v0\n"
+      "[2017-02-11 09:39:25,189] Making new env: Breakout-v0\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-11 09:32:37,856] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.1069.video000000.mp4\n"
+      "[2017-02-11 09:39:25,326] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.1201.video000000.mp4\n"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "text": [
       "[0, 1, 2, 3, 4, 5]\n",
       "(84, 84, 4)\n",
-      "4\n",
+      "1\n",
       "(84, 84, 4)\n"
      ]
     }
@@ -92,9 +92,9 @@
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACFBJREFUeJzt3d+PlNUdx/H3l8UfBTGWLBICtNpKkzap2pRYbUwTQzWE\nNkF7gb8uaGPClbdN+BNae9NeljRGboylaalebBXijTE2KdK0/mjFUsUKEWGLRoEq7vLtxcxsN3SB\nZeY58+wc3q9kM8888+OcfHLy4eyzO2xkJpKk0beo7QlIkpphoUtSJSx0SaqEhS5JlbDQJakSFrok\nVWKgQo+IjRFxICIORsT2pialDvMtx2zLMdv2RL+/hx4RY8CbwN3AYWAf8GBm/q256V2+zLccsy3H\nbNs1yA79NuBgZr6VmWeAp4DNzUxLmG9JZluO2bZo8QCvXQ28O+v+YeBb5z4pIrYB2wCWLOGbN335\nf0O+/eqyAYavx41f/3jm+JVXpyYzcwXzyNdsL67fbMF856OX77uHpzlx4mxgto05z9q9oEEKfV4y\ncwewA+CWm6/IiYnxmcd++IU7Sw8/Ep6YeHHmeM3ao+/M93Vme3H9ZgvmOx+9fDdtmryk15ntxfWz\ndge55HIEWDvr/pruOTXDfMsx23LMtkWDFPo+YF1E3BgRVwIPAM80My1hviWZbTlm26K+L7lk5lRE\nPAo8B4wBj2fm643N7DJnvuWYbTlm266BrqFn5gQw0dBcdA7zLcdsyzHb9vhJUUmqhIUuSZWw0CWp\nEha6JFXCQpekShT/pOiFrHjpujaHr5rZlmW+5Zht/9yhS1IlLHRJqkSrl1zuG/9zm8NXzWzLMt9y\nzLZ/7tAlqRIWuiRVotVLLlcvOtPm8FUz27LMtxyz7Z87dEmqRKs79O8t+aTN4ReM96aaf0+z7SiR\nLZhvj2u3nH6ydYcuSZWw0CWpEq1ecvn5Bze0OfyCcf+y1xp/T7PtKJEtmG+Pa7ecfrJ1hy5JlWh1\nh/6LP21oc/gF4/4Nze9yzLajRLZgvj2u3XL6ydYduiRVwkKXpEq0esnlKz/a3+bwC8e/mn9Ls+0q\nkC2Y7wzXbjl9ZOsOXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSljoklQJC12SKmGhS1Il\nLHRJqoSFLkmVsNAlqRLz+t8WI+IQ8DEwDUxl5vqIWA78GrgBOARsycwPykyzXi/mBBu+e4axMVg8\n1jlnts25/Y5jLF26iLFOtl8F823K7LX79tudP1Fvtu26lB36XZl5a2au797fDjyfmeuA57v31Yff\n7FrOnufGmZgY750y2wb18gX+3j1lvg3pZbvuppm9odm2aJBLLpuBnd3jncC9g09HXWZblvmWY7Yt\nmu8fuEhgT0Qk8MvM3AGszMz3uo8fBVbO9cKI2AZsA1i92kv2c3no4RNEwMMPL+mdMtuGRMRMvkDv\nWyDzbUgv2xMnzvZOmW2L5lvod2bmkYi4HtgbEW/MfjAzs1v2/6db/jsAbrn5ijmfczlbz1089Yf9\nTE5O8+BDHwBcM/txsx3M7367nFWrxpicnObWbxy/PiK+M/tx8+3f7LV7+x3HMdv2zeufxsw80r09\nBuwGbgPej4hVAN3bY6UmWbOr43MAjI+PsXHjVQBLMdvGrFrV+Wno+PgYwIe4dhsze+1ee22A2bbu\nooUeEUsjYlnvGLgHeA14BtjafdpW4OlSk6zVdE4xlZ8BcPr0WV544QzAfzDbRkznFCdPdi4FnD59\nFuBaXLuNOHftnjyZYLatm88ll5XA7uhchFwMPJmZz0bEPmBXRDwCvANsKTfNOn3KJ7zCH7n7nlNM\nT8O9m69m//7PPgJ+gtkO7FM+4b4fnABgehqAD127zTh37S5btohTp6bNtmUXLfTMfAu4ZY7z/wY2\nlJjU5WJJXMPt3M0Te16cOffYz06abUOWxDXs2jPzq6CsWXv0KLh2m3Du2t20aRIw27b542VJqoSF\nLkmVsNAlqRIWuiRVwkKXpEpY6JJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVcJCl6RKWOiS\nVAkLXZIqYaFLUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSiwe5mAfnb2KvadvGOaQA1vx0nUXfPz4\ntz8ceIwfH/7+rHu/6us9zHZuTWQL5ns+vXwPf/b7vt/DbOfWz9p1hy5JlYjMHN5gER8DB4Y24ODG\ngckhj/nFzFxxqS+KiOPAKYY/336NTLYwcmvXbMtasPkO9ZILcCAz1w95zL5FxMujMt/MXDFK8x2l\nuXaNzNo127IWcr5ecpGkSljoklSJYRf6jiGPNyjnW84ozRVGa76jNFdwvo0Z6g9FJUnleMlFkiph\noUtSJYZW6BGxMSIORMTBiNg+rHHnKyIORcSrEfGXiHi5e255ROyNiH90bz/f9jznYrblLPRswXxL\nGrlsM7P4FzAG/BP4EnAl8Ffga8MY+xLmeAgYP+fcY8D27vF24Kdtz9NszdZ8zfZ8X8Paod8GHMzM\ntzLzDPAUsHlIYw9iM7Cze7wTuLfFuZyP2ZYzqtmC+Za0YLMdVqGvBt6ddf9w99xCksCeiNgfEdu6\n51Zm5nvd46PAynamdkFmW84oZAvmW9JIZTvsj/4vZHdm5pGIuB7YGxFvzH4wMzMi/B3P/phtWeZb\nzkhlO6wd+hFg7az7a7rnFozMPNK9PQbspvPt4PsRsQqge3usvRmel9mWs+CzBfMtadSyHVah7wPW\nRcSNEXEl8ADwzJDGvqiIWBoRy3rHwD3Aa3TmuLX7tK3A0+3M8ILMtpwFnS2Yb0mjmO1QLrlk5lRE\nPAo8R+cn249n5uvDGHueVgK7IwI6mTyZmc9GxD5gV0Q8ArwDbGlxjnMy23JGIFsw35JGLls/+i9J\nlfCTopJUCQtdkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVeK/02ATNVorDBIAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAB/FJREFUeJzt3c+PlPUdwPH3p0sMySqxRpYoblpINNCQtEtVLpsmpdZ4\nAk/EnjiQcPIP4Oqt7X9QDiZcjPVC9ODPwImDBBpqiq2UreIP/EEhmuJgom4+Pcwzmw1Z2GXm+c6z\n8+X9SiYz8+zMPt+8ffLJwwPjRGYiSZp8P+l6AZKkdjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEiMN\n9Ih4JiIuRMRCRBxpa1Hqs285ti3Htt2JYf8dekRMAf8Gfg98BpwB/pCZ/2xveXcv+5Zj23Js261R\nztCfBBYy88PM/B54GdjfzrKEfUuybTm27dCGEd67Ffh02fPPgD03vygiDgOHAaanp3/92GOPLf3s\n3LlzI+y+HnNzc0uPz507dzUzN7OGvrZd3bBtwb5rMej7ySefcPXq1cC2rbnFsXtbowz0NcnMo8BR\ngN27d+epU6eWfjY9PV169xPhpiYfr/V9tl3dsG3BvmsxaDI/P39H77Pt6oY5dke55HIZmF32/JFm\nm9ph33JsW45tOzTKQD8DPBoR2yLiHuA54LV2liXsW5Jty7Fth4a+5JKZP0bE88BbwBTwYma+39rK\n7nL2Lce25di2WyNdQ8/M14HXW1qLbmLfcmxbjm274ydFJakSDnRJqoQDXZIq4UCXpEo40CWpEsU/\nKXo7J0+e7HL3VbNtWfYtx7bD8wxdkirhQJekSnR6yWXbtm1d7r5qti3LvuXYdnieoUtSJRzoklSJ\nTi+5TE1Ndbn7qtm2LPuWY9vheYYuSZXo9Ax9dnZ29RfdBW7cuNH677RtX4m2YN8Bj91yhmnrGbok\nVcKBLkmV6PSSy/nz57vc/bqxffv21n+nbftKtAX7DnjsljNMW8/QJakS/s+51oESZzm27St1hm7f\nPo/dcjxDl6S7mANdkmqRmWO7zc3NZa/XW7oB3uDmJmdtu77a2nf1vnNzc2nbMm3v5Nj1DF2SKuFA\nl6RKONAlqRIOdEmqhANdkirhQJekSjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEg50SaqEA12SKrGm\nL7iIiEvAdWAR+DEzH4+IB4C/Aj8HLgEHMvPrMsus2xNPPMHU1BQbNvT/c9i2PTt37uTee+9lamoK\nYCfYt02DY3dhYQGwbdfu5Az9t5n5q8x8vHl+BDiRmY8CJ5rnGsIbb7zBu+++y6lTpwabbNuiQV/g\nX80m+7Zk0HbHjh2DTbbt0CiXXPYDx5rHx4BnR1+OGrYty77l2LZDa/1O0QTejogE/pKZR4EtmflF\n8/MvgS0rvTEiDgOHAWZnZ0dcbp327dtHRHDo0KHBJtu2JCKW+gIPNpvt25JB22vXrg022bZLa/kW\nDGBrcz8DvAf8Bvjmptd87TeTDP/NJB999FHu2rUrgQ9s297t4sWLS32BG3jstnobtN24cWPatv22\nRb6xKDMvN/dXgOPAk8BXEfEQQHN/ZS2/SyubmZlh3759ANPYtjUPP/ww0O8LfIPHbutmZma4//77\nwbadW3WgR8R0RNw3eAw8DZwHXgMONi87CLxaapF3g16vx4kTJwC+w7atuX79OtDvC2zCY7d1vV5v\n0Nm2HVvLNfQtwPHmGuQG4KXMfDMizgCvRMQh4GPgQLll1m3Pnj0sLi5y4MABTp8+/T/gj9i2FU89\n9RQAi4uL0L8c4LHbosGxu2nTJr799lvbdmzVgZ6ZHwK/XGH7NeB3JRZ1tzl9+vTS4xdeeMG2LVre\ndnp6+kvw2G3ToO/8/Dxg2675SVFJqoQDXZIq4UCXpEo40CWpEg50SaqEA12SKuFAl6RKONAlqRIO\ndEmqhANdkirhQJekSjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEg50SaqEA12SKuFAl6RKONAlqRIO\ndEmqxIZx7uyHH37g888/H+cuR3by5Mnb/nzv3r0j72P5N9MPy7Yra6Mt2PdWBn17vd7Qv8O2Kxvm\n2PUMXZIqEZk5vp1FXAcujG2Ho3sQuDrmff4sMzff6Zsi4r9Aj/Gvd1gT0xYm7ti1bVnrtu9YL7kA\nFzLz8THvc2gRcXZS1puZmydpvZO01sbEHLu2LWs99/WSiyRVwoEuSZUY90A/Oub9jcr1ljNJa4XJ\nWu8krRVcb2vG+peikqRyvOQiSZVwoEtSJcY20CPimYi4EBELEXFkXPtdq4i4FBH/iIi/R8TZZtsD\nEfFORFxs7n/a9TpXYtty1ntbsG9JE9c2M4vfgCngP8B24B7gPeAX49j3HazxEvDgTdv+DBxpHh8B\n/tT1Om1rW/va9la3cZ2hPwksZOaHmfk98DKwf0z7HsV+4Fjz+BjwbIdruRXbljOpbcG+Ja3btuMa\n6FuBT5c9/6zZtp4k8HZE/C0iDjfbtmTmF83jL4Et3SzttmxbziS0BfuWNFFtx/3R//VsPjMvR8QM\n8E5EfLD8h5mZEeG/8RyObcuybzkT1XZcZ+iXgdllzx9ptq0bmXm5ub8CHKf/x8GvIuIhgOb+Sncr\nvCXblrPu24J9S5q0tuMa6GeARyNiW0TcAzwHvDamfa8qIqYj4r7BY+Bp4Dz9NR5sXnYQeLWbFd6W\nbctZ123BviVNYtuxXHLJzB8j4nngLfp/s/1iZr4/jn2v0RbgeERAv8lLmflmRJwBXomIQ8DHwIEO\n17gi25YzAW3BviVNXFs/+i9JlfCTopJUCQe6JFXCgS5JlXCgS1IlHOiSVAkHuiRVwoEuSZX4P0hT\nKcenWfBvAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d7e16d8>"
+       "<matplotlib.figure.Figure at 0x10dfe4908>"
       ]
      },
      "metadata": {},
@@ -105,16 +105,16 @@
     "fig = plt.figure()\n",
     "\n",
     "a=fig.add_subplot(1,4,1)\n",
-    "imgplot = plt.imshow(state[:,:,0])\n",
+    "imgplot = plt.imshow(state[:,:,0], cmap='gray')\n",
     "\n",
     "a=fig.add_subplot(1,4,2)\n",
-    "imgplot = plt.imshow(state[:,:,1])\n",
+    "imgplot = plt.imshow(state[:,:,1], cmap='gray')\n",
     "\n",
     "a=fig.add_subplot(1,4,3)\n",
-    "imgplot = plt.imshow(state[:,:,2])\n",
+    "imgplot = plt.imshow(state[:,:,2], cmap='gray')\n",
     "\n",
     "a=fig.add_subplot(1,4,4)\n",
-    "imgplot = plt.imshow(state[:,:,3])"
+    "imgplot = plt.imshow(state[:,:,3], cmap='gray')"
    ]
   },
   {
@@ -128,9 +128,9 @@
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACGlJREFUeJzt3d2PlOUZx/HvxeJLQYwli4QArbbSpE2qNiVWjWliqIbQ\nJmgPfD2gjQlHnjbhT2jtSXtY0hg5MZampXqwVYgnxtikSNP60kpLFStEhC0SBaq4y9WDmdlu6ALL\nzHPPs3Pz/SRkZp7ZmfvKL3d+PPvsDkRmIkkafYvaHkCS1AwLXZIqYaFLUiUsdEmqhIUuSZWw0CWp\nEgMVekRsjIj9EXEgIrY1NZQ6zLccsy3HbNsT/f4eekSMAX8H7gEOAXuBhzPzr82Nd/ky33LMthyz\nbdcgZ+i3AQcy8+3MPAM8A2xuZixhviWZbTlm26LFA7x2NfDerMeHgG+d+0URsRXYCrBkCd+86cv/\nW/Kd15cNsHw9bvz6xzP3X3t9ajIzVzCPfM324vrNFsx3Pnr5vndomuPHzwZm25jz7N0LGqTQ5yUz\ntwPbAW65+YqcmBifee4HX7ir9PIj4amJl2fur1l75N35vs5sL67fbMF856OX76ZNk5f0OrO9uH72\n7iCXXA4Da2c9XtM9pmaYbzlmW47ZtmiQQt8LrIuIGyPiSuAh4LlmxhLmW5LZlmO2Ler7kktmTkXE\n48ALwBjwZGa+2dhklznzLcdsyzHbdg10DT0zJ4CJhmbROcy3HLMtx2zb4ydFJakSFrokVcJCl6RK\nWOiSVAkLXZIqUfyTohey4pXr2ly+amZblvmWY7b98wxdkiphoUtSJVq95HL/+J/aXL5qZluW+ZZj\ntv3zDF2SKmGhS1IlWr3kcvWiM20uXzWzLct8yzHb/nmGLkmVaPUM/btLPmlz+QXj/anm39NsO0pk\nC+bb494tp59sPUOXpEpY6JJUiVYvufzswxvaXH7BeHDZG42/p9l2lMgWzLfHvVtOP9l6hi5JlWj1\nDP3nf9zQ5vILxoMbmj/LMduOEtmC+fa4d8vpJ1vP0CWpEha6JFWi1UsuX/nhvjaXXzj+1fxbmm1X\ngWzBfGe4d8vpI1vP0CWpEha6JFXCQpekSljoklQJC12SKmGhS1IlLHRJqoSFLkmVsNAlqRIWuiRV\nwkKXpEpY6JJUCQtdkioxr39tMSIOAh8D08BUZq6PiOXAr4AbgIPAA5n5YZkx6/VyTrDhO2cYG4PF\nY51jZtuc2+84ytKlixjrZPtVMN+mzN6777zT+S/qzbZdl3KGfndm3pqZ67uPtwEvZuY64MXu45Gx\n4pXr2h5hxq93Lmf3C+NMTIz3Do10tgtNL1/gb91D5tuQXrbrbpo5NzTbFg1yyWUzsKN7fwdw3+Dj\nDM+xO0+0PcKFjHS2I8B8yzHbFs33P7hIYHdEJPCLzNwOrMzM97vPHwFWzvXCiNgKbAVYvdpL9nN5\n5NHjRMCjjy7pHTLbhkTETL5A71sg821IL9vjx8/2Dplti+Zb6Hdl5uGIuB7YExFvzX4yM7Nb9v+n\nW/7bAW65+Yo5v+Zytp67eeb3+5icnObhRz4EuGb282Y7mN/+ZjmrVo0xOTnNrd84dn1EfHv28+bb\nv9l79/Y7jmG27ZvXX42Zebh7exTYBdwGfBARqwC6t0dLDVmzq+NzAIyPj7Fx41UASzHbxqxa1flp\n6Pj4GMAJ3LuNmb13r702wGxbd9FCj4ilEbGsdx+4F3gDeA7Y0v2yLcCzpYas1XROMZWfAXD69Fle\neukMwH8w20ZM5xQnT3YuBZw+fRbgWty7jTh37548mWC2rZvPJZeVwK7oXIRcDDydmc9HxF5gZ0Q8\nBrwLPFBuzDp9yie8xh+4595TTE/DfZuvZt++zz4CfozZDuxTPuH+7x8HYHoagBPu3Wacu3eXLVvE\nqVPTZtuyixZ6Zr4N3DLH8X8DG0oMdblYEtdwO/fw1O6XZ4498dOTZtuQJXENO3fP/Cooa9YeOQLu\n3Sacu3c3bZoEzLZt/nhZkiphoUtSJSx0SaqEhS5JlbDQJakSFrokVcJCl6RKWOiSVAkLXZIqYaFL\nUiUsdEmqhIUuSZWw0CWpEha6JFXCQpekSljoklQJC12SKmGhS1IlLHRJqoSFLkmVsNAlqRKLh7nY\nR2evYs/pG4a5ZDErXrnuvM8du/PEJb3Xjw59b9ajX/Y1zyhme6EM4dJznEsT2YL5nk8v30Of/a7v\n9zDbufWzdz1Dl6RKRGYOb7GIj4H9Q1twcOPA5JDX/GJmrrjUF0XEMeAUw5+3XyOTLYzc3jXbshZs\nvkO95ALsz8z1Q16zbxHx6qjMm5krRmneUZq1a2T2rtmWtZDz9ZKLJFXCQpekSgy70LcPeb1BOW85\nozQrjNa8ozQrOG9jhvpDUUlSOV5ykaRKWOiSVImhFXpEbIyI/RFxICK2DWvd+YqIgxHxekT8OSJe\n7R5bHhF7IuIf3dvPtz3nXMy2nIWeLZhvSSOXbWYW/wOMAf8EvgRcCfwF+Now1r6EGQ8C4+ccewLY\n1r2/DfhJ23Oardmar9me78+wztBvAw5k5tuZeQZ4Btg8pLUHsRnY0b2/A7ivxVnOx2zLGdVswXxL\nWrDZDqvQVwPvzXp8qHtsIUlgd0Tsi4it3WMrM/P97v0jwMp2Rrsgsy1nFLIF8y1ppLId9kf/F7K7\nMvNwRFwP7ImIt2Y/mZkZEf6OZ3/MtizzLWeksh3WGfphYO2sx2u6xxaMzDzcvT0K7KLz7eAHEbEK\noHt7tL0Jz8tsy1nw2YL5ljRq2Q6r0PcC6yLixoi4EngIeG5Ia19URCyNiGW9+8C9wBt0ZtzS/bIt\nwLPtTHhBZlvOgs4WzLekUcx2KJdcMnMqIh4HXqDzk+0nM/PNYaw9TyuBXREBnUyezsznI2IvsDMi\nHgPeBR5occY5mW05I5AtmG9JI5etH/2XpEr4SVFJqoSFLkmVsNAlqRIWuiRVwkKXpEpY6JJUCQtd\nkirxX3XuFjVvgXmLAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACAFJREFUeJzt3c+PlPUdwPH3p0uMySqxRpf4Y9NCopHGpF2Lctk0KbXG\nE3gi9sSBhJN/AFdvbf+DcjDhYqwXogfxR+DEQYINNcVWylbxB/6gEE1xMBE3nx5mZrMhC7vMPN/n\nmfnyfiWTmXl2Zp9v3j755OGBcSIzkSRNv590vQBJUjMc6JJUCQe6JFXCgS5JlXCgS1IlHOiSVImx\nBnpEPBsRZyNiKSIONrUo9dm3HNuWY9vuxKj/Dj0iZoB/A78HPgdOAX/IzH82t7zbl33LsW05tu3W\nOGfoTwFLmflRZv4AvALsaWZZwr4l2bYc23Zo0xjvfQj4bNXzz4Gd178oIg4ABwBmZ2d//eijj678\n7PTp02Psvh4LCwsrj0+fPn0pM+9nA31tu75R24J9N2LY99NPP+XSpUuBbRtzg2P3psYZ6BuSmYeA\nQwBPPPFEnjhxYuVns7OzpXc/Fa5r8slG32fb9Y3aFuy7EcMmi4uLt/Q+265vlGN3nEsuF4D5Vc8f\nHmxTM+xbjm3LsW2Hxhnop4BHImJrRNwBPA+83syyhH1Lsm05tu3QyJdcMvPHiHgBeAuYAV7KzA8a\nW9ltzr7l2LYc23ZrrGvomfkG8EZDa9F17FuObcuxbXf8pKgkVcKBLkmVcKBLUiUc6JJUCQe6JFWi\n+CdFb+b48eNd7r5qti3LvuXYdnSeoUtSJRzoklSJTi+5bN26tcvdV822Zdm3HNuOzjN0SaqEA12S\nKtHpJZeZmZkud18125Zl33JsOzrP0CWpEp2eoc/Pz6//otvA1atXG/+dtu0r0RbsO+SxW84obT1D\nl6RKONAlqRKdXnI5c+ZMl7ufGNu2bWv8d9q2r0RbsO+Qx245o7T1DF2SKuH/nGsClDjLsW1fqTN0\n+/Z57JbjGbok3cYc6JJUi8xs7bawsJC9Xm/lBniD65u8Z9vJamvf9fsuLCykbcu0vZVj1zN0SaqE\nA12SKuFAl6RKONAlqRIOdEmqhANdkirhQJekSjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEg50SarE\nhr7gIiLOA1eAZeDHzNwREfcCfwV+DpwH9mbmN2WWWbcnn3ySmZkZNm3q/+ewbXO2b9/OXXfdxczM\nDMB2sG+Thsfu0tISYNuu3coZ+m8z81eZuWPw/CBwLDMfAY4Nnk+NSfpWlKNHj/Luu+9y4sSJ4aap\nbjtphn2Bfw022bchw7aPPfbYcJNtOzTOJZc9wOHB48PAc+Mvpz27du3qegk3M9Vtp4B9y7Fthzb6\nnaIJvB0RCfwlMw8BWzLzy8HPvwK2rPXGiDgAHACYn58fc7l12r17NxHB/v37h5ts25CIWOkL3DfY\nbN+GDNtevnx5uMm2XdrIt2AADw3u54D3gd8A3173mm/8ZpLRv5nk448/zscffzyBD23b3O3cuXMr\nfYGreOw2ehu2vfPOO9O2zbct8o1FmXlhcH8ROAI8BXwdEQ8ADO4vbuR3aW1zc3Ps3r0bYBbbNubB\nBx8E+n2Bb/HYbdzc3Bz33HMP2LZz6w70iJiNiLuHj4FngDPA68C+wcv2Aa+VWuTtoNfrcezYMYDv\nsW1jrly5AvT7Apvx2G1cr9cbdrZtxzZyDX0LcGRwDXIT8HJmvhkRp4BXI2I/8Amwt9wy67Zz506W\nl5fZu3cvJ0+e/B/wR2zbiKeffhqA5eVl6F8O8Nht0PDY3bx5M999951tO7buQM/Mj4BfrrH9MvC7\nEou63Zw8eXLl8YsvvmjbBq1uOzs7+xV47DZp2HdxcRGwbdf8pKgkVcKBLkmVcKBLUiUc6JJUCQe6\nJFXCgS5JlXCgS1IlHOiSVAkHuiRVwoEuSZVwoEtSJRzoklQJB7okVcKBLkmVcKBLUiUc6JJUCQe6\nJFXCgS5JlXCgS1IlHOiSVAkHuiRVYlObO7t27RpffPFFm7sc2/Hjx2/68127do29j9XfTD8q266t\nibZg3xsZ9u31eiP/DtuubZRj1zN0SapEZGZ7O4u4ApxtbYfjuw+41PI+f5aZ99/qmyLiv0CP9tc7\nqqlpC1N37Nq2rInt2+olF+BsZu5oeZ8ji4j3pmW9mXn/NK13mtY6MDXHrm3LmuS+XnKRpEo40CWp\nEm0P9EMt729crrecaVorTNd6p2mt4Hob0+pfikqSyvGSiyRVwoEuSZVobaBHxLMRcTYiliLiYFv7\n3aiIOB8R/4iIv0fEe4Nt90bEOxFxbnD/067XuRbbljPpbcG+JU1d28wsfgNmgP8A24A7gPeBX7Sx\n71tY43ngvuu2/Rk4OHh8EPhT1+u0rW3ta9sb3do6Q38KWMrMjzLzB+AVYE9L+x7HHuDw4PFh4LkO\n13Ijti1nWtuCfUua2LZtDfSHgM9WPf98sG2SJPB2RPwtIg4Mtm3JzC8Hj78CtnSztJuybTnT0Bbs\nW9JUtW37o/+TbDEzL0TEHPBORHy4+oeZmRHhv/EcjW3Lsm85U9W2rTP0C8D8qucPD7ZNjMy8MLi/\nCByh/8fBryPiAYDB/cXuVnhDti1n4tuCfUuatrZtDfRTwCMRsTUi7gCeB15vad/riojZiLh7+Bh4\nBjhDf437Bi/bB7zWzQpvyrblTHRbsG9J09i2lUsumfljRLwAvEX/b7ZfyswP2tj3Bm0BjkQE9Ju8\nnJlvRsQp4NWI2A98AuztcI1rsm05U9AW7FvS1LX1o/+SVAk/KSpJlXCgS1IlHOiSVAkHuiRVwoEu\nSZVwoEtSJRzoklSJ/wPHdSzHOl2asQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d7e11d0>"
+       "<matplotlib.figure.Figure at 0x10dfe4748>"
       ]
      },
      "metadata": {},
@@ -141,16 +141,16 @@
     "fig = plt.figure()\n",
     "\n",
     "a=fig.add_subplot(1,4,1)\n",
-    "imgplot = plt.imshow(next_state[:,:,0])\n",
+    "imgplot = plt.imshow(next_state[:,:,0], cmap='gray')\n",
     "\n",
     "a=fig.add_subplot(1,4,2)\n",
-    "imgplot = plt.imshow(next_state[:,:,1])\n",
+    "imgplot = plt.imshow(next_state[:,:,1], cmap='gray')\n",
     "\n",
     "a=fig.add_subplot(1,4,3)\n",
-    "imgplot = plt.imshow(next_state[:,:,2])\n",
+    "imgplot = plt.imshow(next_state[:,:,2], cmap='gray')\n",
     "\n",
     "a=fig.add_subplot(1,4,4)\n",
-    "imgplot = plt.imshow(next_state[:,:,3])"
+    "imgplot = plt.imshow(next_state[:,:,3], cmap='gray')"
    ]
   },
   {
