change config structure

--- a/env_test.ipynb
+++ b/env_test.ipynb
@@ -13,7 +13,7 @@
     "%matplotlib inline\n",
     "\n",
     "from environment import Environment\n",
-    "from config import Configurations\n",
+    "from config import get_config\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -31,13 +31,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-11 09:39:25,189] Making new env: Breakout-v0\n"
+      "[2017-02-11 12:57:34,158] Making new env: Breakout-v0\n"
      ]
     }
    ],
    "source": [
     "sess = tf.Session()\n",
-    "config = Configurations()\n",
+    "config = get_config()\n",
     "env = Environment(sess, config)"
    ]
   },
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2017-02-11 09:39:25,326] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.1201.video000000.mp4\n"
+      "[2017-02-11 12:57:34,365] Starting new video recorder writing to /Volumes/HDD/Users/Omar/ML/DQN-tf/expriment/monitor/openaigym.video.0.5452.video000000.mp4\n"
      ]
     },
     {
@@ -63,7 +63,7 @@
      "text": [
       "[0, 1, 2, 3, 4, 5]\n",
       "(84, 84, 4)\n",
-      "1\n",
+      "4\n",
       "(84, 84, 4)\n"
      ]
     }
@@ -94,7 +94,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAB/FJREFUeJzt3c+PlPUdwPH3p0sMySqxRpYoblpINNCQtEtVLpsmpdZ4\nAk/EnjiQcPIP4Oqt7X9QDiZcjPVC9ODPwImDBBpqiq2UreIP/EEhmuJgom4+Pcwzmw1Z2GXm+c6z\n8+X9SiYz8+zMPt+8ffLJwwPjRGYiSZp8P+l6AZKkdjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEiMN\n9Ih4JiIuRMRCRBxpa1Hqs285ti3Htt2JYf8dekRMAf8Gfg98BpwB/pCZ/2xveXcv+5Zj23Js261R\nztCfBBYy88PM/B54GdjfzrKEfUuybTm27dCGEd67Ffh02fPPgD03vygiDgOHAaanp3/92GOPLf3s\n3LlzI+y+HnNzc0uPz507dzUzN7OGvrZd3bBtwb5rMej7ySefcPXq1cC2rbnFsXtbowz0NcnMo8BR\ngN27d+epU6eWfjY9PV169xPhpiYfr/V9tl3dsG3BvmsxaDI/P39H77Pt6oY5dke55HIZmF32/JFm\nm9ph33JsW45tOzTKQD8DPBoR2yLiHuA54LV2liXsW5Jty7Fth4a+5JKZP0bE88BbwBTwYma+39rK\n7nL2Lce25di2WyNdQ8/M14HXW1qLbmLfcmxbjm274ydFJakSDnRJqoQDXZIq4UCXpEo40CWpEsU/\nKXo7J0+e7HL3VbNtWfYtx7bD8wxdkirhQJekSnR6yWXbtm1d7r5qti3LvuXYdnieoUtSJRzoklSJ\nTi+5TE1Ndbn7qtm2LPuWY9vheYYuSZXo9Ax9dnZ29RfdBW7cuNH677RtX4m2YN8Bj91yhmnrGbok\nVcKBLkmV6PSSy/nz57vc/bqxffv21n+nbftKtAX7DnjsljNMW8/QJakS/s+51oESZzm27St1hm7f\nPo/dcjxDl6S7mANdkmqRmWO7zc3NZa/XW7oB3uDmJmdtu77a2nf1vnNzc2nbMm3v5Nj1DF2SKuFA\nl6RKONAlqRIOdEmqhANdkirhQJekSjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEg50SaqEA12SKrGm\nL7iIiEvAdWAR+DEzH4+IB4C/Aj8HLgEHMvPrMsus2xNPPMHU1BQbNvT/c9i2PTt37uTee+9lamoK\nYCfYt02DY3dhYQGwbdfu5Az9t5n5q8x8vHl+BDiRmY8CJ5rnGsIbb7zBu+++y6lTpwabbNuiQV/g\nX80m+7Zk0HbHjh2DTbbt0CiXXPYDx5rHx4BnR1+OGrYty77l2LZDa/1O0QTejogE/pKZR4EtmflF\n8/MvgS0rvTEiDgOHAWZnZ0dcbp327dtHRHDo0KHBJtu2JCKW+gIPNpvt25JB22vXrg022bZLa/kW\nDGBrcz8DvAf8Bvjmptd87TeTDP/NJB999FHu2rUrgQ9s297t4sWLS32BG3jstnobtN24cWPatv22\nRb6xKDMvN/dXgOPAk8BXEfEQQHN/ZS2/SyubmZlh3759ANPYtjUPP/ww0O8LfIPHbutmZma4//77\nwbadW3WgR8R0RNw3eAw8DZwHXgMONi87CLxaapF3g16vx4kTJwC+w7atuX79OtDvC2zCY7d1vV5v\n0Nm2HVvLNfQtwPHmGuQG4KXMfDMizgCvRMQh4GPgQLll1m3Pnj0sLi5y4MABTp8+/T/gj9i2FU89\n9RQAi4uL0L8c4LHbosGxu2nTJr799lvbdmzVgZ6ZHwK/XGH7NeB3JRZ1tzl9+vTS4xdeeMG2LVre\ndnp6+kvw2G3ToO/8/Dxg2675SVFJqoQDXZIq4UCXpEo40CWpEg50SaqEA12SKuFAl6RKONAlqRIO\ndEmqhANdkirhQJekSjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEg50SaqEA12SKuFAl6RKONAlqRIO\ndEmqxIZx7uyHH37g888/H+cuR3by5Mnb/nzv3r0j72P5N9MPy7Yra6Mt2PdWBn17vd7Qv8O2Kxvm\n2PUMXZIqEZk5vp1FXAcujG2Ho3sQuDrmff4sMzff6Zsi4r9Aj/Gvd1gT0xYm7ti1bVnrtu9YL7kA\nFzLz8THvc2gRcXZS1puZmydpvZO01sbEHLu2LWs99/WSiyRVwoEuSZUY90A/Oub9jcr1ljNJa4XJ\nWu8krRVcb2vG+peikqRyvOQiSZVwoEtSJcY20CPimYi4EBELEXFkXPtdq4i4FBH/iIi/R8TZZtsD\nEfFORFxs7n/a9TpXYtty1ntbsG9JE9c2M4vfgCngP8B24B7gPeAX49j3HazxEvDgTdv+DBxpHh8B\n/tT1Om1rW/va9la3cZ2hPwksZOaHmfk98DKwf0z7HsV+4Fjz+BjwbIdruRXbljOpbcG+Ja3btuMa\n6FuBT5c9/6zZtp4k8HZE/C0iDjfbtmTmF83jL4Et3SzttmxbziS0BfuWNFFtx/3R//VsPjMvR8QM\n8E5EfLD8h5mZEeG/8RyObcuybzkT1XZcZ+iXgdllzx9ptq0bmXm5ub8CHKf/x8GvIuIhgOb+Sncr\nvCXblrPu24J9S5q0tuMa6GeARyNiW0TcAzwHvDamfa8qIqYj4r7BY+Bp4Dz9NR5sXnYQeLWbFd6W\nbctZ123BviVNYtuxXHLJzB8j4nngLfp/s/1iZr4/jn2v0RbgeERAv8lLmflmRJwBXomIQ8DHwIEO\n17gi25YzAW3BviVNXFs/+i9JlfCTopJUCQe6JFXCgS5JlXCgS1IlHOiSVAkHuiRVwoEuSZX4P0hT\nKcenWfBvAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10dfe4908>"
+       "<matplotlib.figure.Figure at 0x10d7e2908>"
       ]
      },
      "metadata": {},
@@ -128,9 +128,9 @@
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACAFJREFUeJzt3c+PlPUdwPH3p0uMySqxRpf4Y9NCopHGpF2Lctk0KbXG\nE3gi9sSBhJN/AFdvbf+DcjDhYqwXogfxR+DEQYINNcVWylbxB/6gEE1xMBE3nx5mZrMhC7vMPN/n\nmfnyfiWTmXl2Zp9v3j755OGBcSIzkSRNv590vQBJUjMc6JJUCQe6JFXCgS5JlXCgS1IlHOiSVImx\nBnpEPBsRZyNiKSIONrUo9dm3HNuWY9vuxKj/Dj0iZoB/A78HPgdOAX/IzH82t7zbl33LsW05tu3W\nOGfoTwFLmflRZv4AvALsaWZZwr4l2bYc23Zo0xjvfQj4bNXzz4Gd178oIg4ABwBmZ2d//eijj678\n7PTp02Psvh4LCwsrj0+fPn0pM+9nA31tu75R24J9N2LY99NPP+XSpUuBbRtzg2P3psYZ6BuSmYeA\nQwBPPPFEnjhxYuVns7OzpXc/Fa5r8slG32fb9Y3aFuy7EcMmi4uLt/Q+265vlGN3nEsuF4D5Vc8f\nHmxTM+xbjm3LsW2Hxhnop4BHImJrRNwBPA+83syyhH1Lsm05tu3QyJdcMvPHiHgBeAuYAV7KzA8a\nW9ltzr7l2LYc23ZrrGvomfkG8EZDa9F17FuObcuxbXf8pKgkVcKBLkmVcKBLUiUc6JJUCQe6JFWi\n+CdFb+b48eNd7r5qti3LvuXYdnSeoUtSJRzoklSJTi+5bN26tcvdV822Zdm3HNuOzjN0SaqEA12S\nKtHpJZeZmZkud18125Zl33JsOzrP0CWpEp2eoc/Pz6//otvA1atXG/+dtu0r0RbsO+SxW84obT1D\nl6RKONAlqRKdXnI5c+ZMl7ufGNu2bWv8d9q2r0RbsO+Qx245o7T1DF2SKuH/nGsClDjLsW1fqTN0\n+/Z57JbjGbok3cYc6JJUi8xs7bawsJC9Xm/lBniD65u8Z9vJamvf9fsuLCykbcu0vZVj1zN0SaqE\nA12SKuFAl6RKONAlqRIOdEmqhANdkirhQJekSjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEg50SarE\nhr7gIiLOA1eAZeDHzNwREfcCfwV+DpwH9mbmN2WWWbcnn3ySmZkZNm3q/+ewbXO2b9/OXXfdxczM\nDMB2sG+Thsfu0tISYNuu3coZ+m8z81eZuWPw/CBwLDMfAY4Nnk+NSfpWlKNHj/Luu+9y4sSJ4aap\nbjtphn2Bfw022bchw7aPPfbYcJNtOzTOJZc9wOHB48PAc+Mvpz27du3qegk3M9Vtp4B9y7Fthzb6\nnaIJvB0RCfwlMw8BWzLzy8HPvwK2rPXGiDgAHACYn58fc7l12r17NxHB/v37h5ts25CIWOkL3DfY\nbN+GDNtevnx5uMm2XdrIt2AADw3u54D3gd8A3173mm/8ZpLRv5nk448/zscffzyBD23b3O3cuXMr\nfYGreOw2ehu2vfPOO9O2zbct8o1FmXlhcH8ROAI8BXwdEQ8ADO4vbuR3aW1zc3Ps3r0bYBbbNubB\nBx8E+n2Bb/HYbdzc3Bz33HMP2LZz6w70iJiNiLuHj4FngDPA68C+wcv2Aa+VWuTtoNfrcezYMYDv\nsW1jrly5AvT7Apvx2G1cr9cbdrZtxzZyDX0LcGRwDXIT8HJmvhkRp4BXI2I/8Amwt9wy67Zz506W\nl5fZu3cvJ0+e/B/wR2zbiKeffhqA5eVl6F8O8Nht0PDY3bx5M999951tO7buQM/Mj4BfrrH9MvC7\nEou63Zw8eXLl8YsvvmjbBq1uOzs7+xV47DZp2HdxcRGwbdf8pKgkVcKBLkmVcKBLUiUc6JJUCQe6\nJFXCgS5JlXCgS1IlHOiSVAkHuiRVwoEuSZVwoEtSJRzoklQJB7okVcKBLkmVcKBLUiUc6JJUCQe6\nJFXCgS5JlXCgS1IlHOiSVAkHuiRVYlObO7t27RpffPFFm7sc2/Hjx2/68127do29j9XfTD8q266t\nibZg3xsZ9u31eiP/DtuubZRj1zN0SapEZGZ7O4u4ApxtbYfjuw+41PI+f5aZ99/qmyLiv0CP9tc7\nqqlpC1N37Nq2rInt2+olF+BsZu5oeZ8ji4j3pmW9mXn/NK13mtY6MDXHrm3LmuS+XnKRpEo40CWp\nEm0P9EMt729crrecaVorTNd6p2mt4Hob0+pfikqSyvGSiyRVwoEuSZVobaBHxLMRcTYiliLiYFv7\n3aiIOB8R/4iIv0fEe4Nt90bEOxFxbnD/067XuRbbljPpbcG+JU1d28wsfgNmgP8A24A7gPeBX7Sx\n71tY43ngvuu2/Rk4OHh8EPhT1+u0rW3ta9sb3do6Q38KWMrMjzLzB+AVYE9L+x7HHuDw4PFh4LkO\n13Ijti1nWtuCfUua2LZtDfSHgM9WPf98sG2SJPB2RPwtIg4Mtm3JzC8Hj78CtnSztJuybTnT0Bbs\nW9JUtW37o/+TbDEzL0TEHPBORHy4+oeZmRHhv/EcjW3Lsm85U9W2rTP0C8D8qucPD7ZNjMy8MLi/\nCByh/8fBryPiAYDB/cXuVnhDti1n4tuCfUuatrZtDfRTwCMRsTUi7gCeB15vad/riojZiLh7+Bh4\nBjhDf437Bi/bB7zWzQpvyrblTHRbsG9J09i2lUsumfljRLwAvEX/b7ZfyswP2tj3Bm0BjkQE9Ju8\nnJlvRsQp4NWI2A98AuztcI1rsm05U9AW7FvS1LX1o/+SVAk/KSpJlXCgS1IlHOiSVAkHuiRVwoEu\nSZVwoEtSJRzoklSJ/wPHdSzHOl2asQAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAABrCAYAAABnlHmpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACAhJREFUeJzt3c+LnPUdwPH3pxtEWA1WdIM/ljYBxRShXavmshSaWvGU\neAr2lEMgJ/+AXL21/Q+ag5CLWC9BD/4ke8rBEEsqja1pthp/xB9pgtI4EYzLp4eZWZaQzW5mnu/z\nzHzzfsEwM8/szvPl7cOHJ08yTmQmkqTp95OuFyBJaoYDXZIq4UCXpEo40CWpEg50SaqEA12SKjHW\nQI+IZyLiTEQsR8ShphalPvuWY9tybNudGPXfoUfEDPBv4PfA58BJ4A+Z+c/mlnfrsm85ti3Htt0a\n5wz9SWA5Mz/KzB+Al4G9zSxL2Lck25Zj2w5tGeN3HwA+W/P8c2DXtT8UEQeBgwCzs7O/fvjhh1df\nO3Xq1Bi7r8fCwsLq41OnTl3MzHvZRF/bbmzUtmDfzRj2/fTTT7l48WJg28asc+ze0DgDfVMy8zBw\nGOCxxx7L48ePr742OztbevdT4Zomn2z292y7sVHbgn03Y9hkcXHxpn7Pthsb5dgd55LLeWB+zfMH\nB9vUDPuWY9tybNuhcQb6SeChiNgeEbcBzwGvNbMsYd+SbFuObTs08iWXzPwxIp4H3gJmgBcz84PG\nVnaLs285ti3Htt0a6xp6Zr4OvN7QWnQN+5Zj23Js2x0/KSpJlXCgS1IlHOiSVAkHuiRVwoEuSZUo\n/knRG1laWupy91WzbVn2Lce2o/MMXZIq4UCXpEp0esll+/btXe6+arYty77l2HZ0nqFLUiUc6JJU\niU4vuczMzHS5+6rZtiz7lmPb0XmGLkmV6PQMfX5+fuMfugVcuXKl8fe0bV+JtmDfIY/dckZp6xm6\nJFXCgS5Jlej0ksvp06e73P3E2LFjR+Pvadu+Em3BvkMeu+WM0tYzdEmqhP9zrglQ4izHtn2lztDt\n2+exW45n6JJ0C3OgS1ItMrO128LCQvZ6vdUb4A2ubfKebSerrX037ruwsJC2LdP2Zo5dz9AlqRIO\ndEmqhANdkirhQJekSjjQJakSDnRJqoQDXZIq4UCXpEo40CWpEg50SaqEA12SKuFAl6RKONAlqRKb\n+oKLiDgHXAZWgB8z8/GIuBv4K/Bz4BywLzO/KbPMcpaWlti9e3ena3jiiSeYmZlhy5b+f45a2k6C\nnTt3cscddzAzMwOwE+zbpOGxu7y8DNi2azdzhv7bzPxVZj4+eH4IOJaZDwHHBs81gjfeeIN3332X\n48ePDzfZtkHDvsC/Bpvs25Bh20ceeWS4ybYdGueSy17gyODxEeDZ8ZfTvq7PztdRRdsJZt9ybNuh\nzX6naAJvR0QCf8nMw8C2zPxy8PpXwLbr/WJEHAQOAszPz4+53Drt2bOHiODAgQPDTbZtSESs9gXu\nGWy2b0OGbS9dujTcZNsubeZbMIAHBvdzwPvAb4Bvr/mZb/xmktG/meTjjz/ORx99NIEPbdvc7ezZ\ns6t9gSt47DZ6G7a9/fbb07bNty3yjUWZeX5wfwE4CjwJfB0R9wEM7i9s5r10fXNzc+zZswdgFts2\n5v777wf6fYFv8dht3NzcHHfddRfYtnMbDvSImI2IO4ePgaeB08BrwP7Bj+0HXi21yFtBr9fj2LFj\nAN9j28ZcvnwZ6PcFtuKx27herzfsbNuObeYa+jbg6OAa5Bbgpcx8MyJOAq9ExAHgE2BfuWXWbdeu\nXaysrLBv3z5OnDjxP+CP2LYRTz31FAArKyvQvxzgsdug4bG7detWvvvuO9t2bMOBnpkfAb+8zvZL\nwO9KLOpWc+LEidXHL7zwgm0btLbt7OzsV+Cx26Rh38XFRcC2XfOTopJUCQe6JFXCgS5JlXCgS1Il\nHOiSVAkHuiRVwoEuSZVwoEtSJRzoklQJB7okVcKBLkmVcKBLUiUc6JJUCQe6JFXCgS5JlXCgS1Il\nHOiSVAkHuiRVwoEuSZVwoEtSJRzoklSJLW3u7OrVq3zxxRdt7rIxS0tL6762e/fusd577TfTj2oa\n296oKYzfFZppC/Zdz7Bvr9cb+T1se32jHLueoUtSJSIz29tZxGXgTGs7HN89wMWW9/mzzLz3Zn8p\nIv4L9Gh/vaOamrYwdceubcua2L6tXnIBzmTm4y3vc2QR8d60rDcz752m9U7TWgem5ti1bVmT3NdL\nLpJUCQe6JFWi7YF+uOX9jcv1ljNNa4XpWu80rRVcb2Na/UtRSVI5XnKRpEo40CWpEq0N9Ih4JiLO\nRMRyRBxqa7+bFRHnIuIfEfH3iHhvsO3uiHgnIs4O7n/a9Tqvx7blTHpbsG9JU9c2M4vfgBngP8AO\n4DbgfeAXbez7JtZ4Drjnmm1/Bg4NHh8C/tT1Om1rW/vadr1bW2foTwLLmflRZv4AvAzsbWnf49gL\nHBk8PgI82+Fa1mPbcqa1Ldi3pIlt29ZAfwD4bM3zzwfbJkkCb0fE3yLi4GDbtsz8cvD4K2BbN0u7\nIduWMw1twb4lTVXbtj/6P8kWM/N8RMwB70TEh2tfzMyMCP+N52hsW5Z9y5mqtm2doZ8H5tc8f3Cw\nbWJk5vnB/QXgKP0/Dn4dEfcBDO4vdLfCddm2nIlvC/YtadratjXQTwIPRcT2iLgNeA54raV9bygi\nZiPizuFj4GngNP017h/82H7g1W5WeEO2LWei24J9S5rGtq1ccsnMHyPieeAt+n+z/WJmftDGvjdp\nG3A0IqDf5KXMfDMiTgKvRMQB4BNgX4drvC7bljMFbcG+JU1dWz/6L0mV8JOiklQJB7okVcKBLkmV\ncKBLUiUc6JJUCQe6JFXCgS5Jlfg/vwstjQupvyUAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10dfe4748>"
+       "<matplotlib.figure.Figure at 0x10d7e26a0>"
       ]
      },
      "metadata": {},
@@ -185,5 +185,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
